test/fixtures/themes/002-comment-id/invalid/partials/mypartial.hbs
<html>
<body>
<script>
    var disqus_identifier = 'ghost-{{id}}';
</script>
</body>
</html>
